# Web_HW7

./: README.md
hw_7/: config.ini  main.py  my_select.py  pyproject.toml  seeds.py
hw_7/conf/: db.py  models.py
hw_7/migrations/versions/: 37b5ec1d16c2_init.py
